--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -7,7 +7,6 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
-allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.208.86.5;
 allow 103.251.167.10;
@@ -123,6 +122,7 @@ allow 136.244.111.163;
 allow 137.63.71.51;
 allow 138.59.18.110;
 allow 139.99.172.11;
+allow 139.99.8.57;
 allow 141.239.149.94;
 allow 141.98.10.14;
 allow 141.98.11.62;
@@ -932,7 +932,6 @@ allow 209.141.62.71;
 allow 212.73.134.204;
 allow 212.95.50.77;
 allow 212.95.52.76;
-allow 213.156.142.30;
 allow 213.252.140.118;
 allow 213.95.149.22;
 allow 216.239.90.19;
@@ -980,6 +979,7 @@ allow 23.94.133.162;
 allow 23.94.211.25;
 allow 23.94.36.142;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
+allow 2402:1f00:8000:239::;
 allow 2402:1f00:8100:400::9;
 allow 2.57.122.179;
 allow 2.57.122.215;
@@ -995,7 +995,7 @@ allow 2.58.95.38;
 allow 2600:3c00:e000:4ee::3;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
-allow 2600:3c03:e000:fa::2;
+allow 2600:3c03:e000:fa::1;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2602:2e5::104;
 allow 2602:2e6:0:6::;
@@ -1317,6 +1317,7 @@ allow 2a04:52c0:102:46e0::1;
 allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:31e6::1;
+allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:105:82c0::1;
@@ -1628,6 +1629,7 @@ allow 45.134.225.36;
 allow 45.135.132.20;
 allow 45.138.16.107;
 allow 45.138.16.113;
+allow 45.138.16.142;
 allow 45.138.16.203;
 allow 45.138.16.222;
 allow 45.138.16.230;
