--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -7,7 +7,6 @@ set_real_ip_from 103.126.161.54;
 set_real_ip_from 103.129.222.46;
 set_real_ip_from 103.163.218.11;
 set_real_ip_from 103.172.134.26;
-set_real_ip_from 103.174.253.222;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.208.86.5;
 set_real_ip_from 103.251.167.10;
@@ -123,6 +122,7 @@ set_real_ip_from 136.244.111.163;
 set_real_ip_from 137.63.71.51;
 set_real_ip_from 138.59.18.110;
 set_real_ip_from 139.99.172.11;
+set_real_ip_from 139.99.8.57;
 set_real_ip_from 141.239.149.94;
 set_real_ip_from 141.98.10.14;
 set_real_ip_from 141.98.11.62;
@@ -932,7 +932,6 @@ set_real_ip_from 209.141.62.71;
 set_real_ip_from 212.73.134.204;
 set_real_ip_from 212.95.50.77;
 set_real_ip_from 212.95.52.76;
-set_real_ip_from 213.156.142.30;
 set_real_ip_from 213.252.140.118;
 set_real_ip_from 213.95.149.22;
 set_real_ip_from 216.239.90.19;
@@ -980,6 +979,7 @@ set_real_ip_from 23.94.133.162;
 set_real_ip_from 23.94.211.25;
 set_real_ip_from 23.94.36.142;
 set_real_ip_from 2401:c080:2000:111f:5400:4ff:fea3:9c02;
+set_real_ip_from 2402:1f00:8000:239::;
 set_real_ip_from 2402:1f00:8100:400::9;
 set_real_ip_from 2.57.122.179;
 set_real_ip_from 2.57.122.215;
@@ -995,7 +995,7 @@ set_real_ip_from 2.58.95.38;
 set_real_ip_from 2600:3c00:e000:4ee::3;
 set_real_ip_from 2600:3c00::f03c:91ff:fe73:f9ba;
 set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
-set_real_ip_from 2600:3c03:e000:fa::2;
+set_real_ip_from 2600:3c03:e000:fa::1;
 set_real_ip_from 2600:3c03::f03c:94ff:fed1:8c69;
 set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:6::;
@@ -1317,6 +1317,7 @@ set_real_ip_from 2a04:52c0:102:46e0::1;
 set_real_ip_from 2a04:52c0:103:412::1;
 set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:31e6::1;
+set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
 set_real_ip_from 2a04:52c0:105:78fc::1;
 set_real_ip_from 2a04:52c0:105:82c0::1;
@@ -1628,6 +1629,7 @@ set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.135.132.20;
 set_real_ip_from 45.138.16.107;
 set_real_ip_from 45.138.16.113;
+set_real_ip_from 45.138.16.142;
 set_real_ip_from 45.138.16.203;
 set_real_ip_from 45.138.16.222;
 set_real_ip_from 45.138.16.230;
