--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -7,6 +7,7 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.208.86.5;
 allow 103.251.167.10;
@@ -118,6 +119,7 @@ allow 130.193.10.21;
 allow 130.193.15.186;
 allow 134.122.66.38;
 allow 135.125.205.25;
+allow 135.181.124.211;
 allow 136.244.111.163;
 allow 137.63.71.51;
 allow 138.59.18.110;
@@ -148,7 +150,6 @@ allow 151.80.148.159;
 allow 152.89.233.169;
 allow 154.16.116.61;
 allow 160.119.249.240;
-allow 161.35.129.51;
 allow 162.247.72.192;
 allow 162.247.72.199;
 allow 162.247.74.200;
@@ -705,6 +706,7 @@ allow 2001:41d0:a:fe22::1;
 allow 2001:470:1:908::9001;
 allow 2001:4b20:12:f001::105;
 allow 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
+allow 2001:4b98:dc0:43:f816:3eff:feed:683f;
 allow 2001:4b98:dc0:47:216:3eff:fe3d:888c;
 allow 2001:620:20d0::19;
 allow 2001:620:20d0::20;
@@ -973,6 +975,7 @@ allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.6;
+allow 23.155.8.104;
 allow 23.236.122.62;
 allow 23.26.133.239;
 allow 23.94.133.162;
@@ -997,6 +1000,7 @@ allow 2600:3c00::f03c:91ff:fe73:f9ba;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::1;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
+allow 2602:2e5::104;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::14;
 allow 2602:fc24:12:81a6::1;
@@ -1223,6 +1227,7 @@ allow 2a00:1dc0:caff:73::a568;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:99a0:0:1000::2;
 allow 2a01:4262:1ab:ffff::133;
+allow 2a01:4f9:4a:4442::5;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
@@ -1364,7 +1369,6 @@ allow 2a06:1700:4:14::1;
 allow 2a06:d380:0:103::62;
 allow 2a06:d380:0:103::63;
 allow 2a06:e80:3000:1:bad:babe:ca11:911;
-allow 2a07:5900::253;
 allow 2a07:e01:2:13::2;
 allow 2a07:e03:2a::bcde;
 allow 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
@@ -1684,11 +1688,11 @@ allow 45.95.169.255;
 allow 45.95.202.48;
 allow 46.165.243.36;
 allow 46.182.21.248;
+allow 46.226.107.206;
 allow 46.226.164.14;
 allow 46.232.251.191;
 allow 46.234.47.105;
 allow 46.38.255.27;
-allow 46.41.150.103;
 allow 50.3.182.133;
 allow 50.3.182.156;
 allow 51.15.249.160;
@@ -1748,6 +1752,7 @@ allow 54.36.108.162;
 allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
+allow 54.87.125.137;
 allow 5.61.51.143;
 allow 57.129.20.162;
 allow 5.79.66.19;
@@ -1870,7 +1875,6 @@ allow 91.208.75.239;
 allow 91.208.75.3;
 allow 91.208.75.4;
 allow 91.210.59.57;
-allow 91.217.219.253;
 allow 91.219.236.101;
 allow 91.219.237.56;
 allow 91.219.239.166;
@@ -1928,4 +1932,5 @@ allow 95.164.46.204;
 allow 95.168.173.143;
 allow 95.211.210.103;
 allow 95.211.244.28;
+allow 96.42.26.63;
 allow 98.128.173.33;
