--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -7,6 +7,7 @@ deny 103.126.161.54;
 deny 103.129.222.46;
 deny 103.163.218.11;
 deny 103.172.134.26;
+deny 103.174.253.222;
 deny 103.193.179.233;
 deny 103.208.86.5;
 deny 103.251.167.10;
@@ -118,6 +119,7 @@ deny 130.193.10.21;
 deny 130.193.15.186;
 deny 134.122.66.38;
 deny 135.125.205.25;
+deny 135.181.124.211;
 deny 136.244.111.163;
 deny 137.63.71.51;
 deny 138.59.18.110;
@@ -148,7 +150,6 @@ deny 151.80.148.159;
 deny 152.89.233.169;
 deny 154.16.116.61;
 deny 160.119.249.240;
-deny 161.35.129.51;
 deny 162.247.72.192;
 deny 162.247.72.199;
 deny 162.247.74.200;
@@ -705,6 +706,7 @@ deny 2001:41d0:a:fe22::1;
 deny 2001:470:1:908::9001;
 deny 2001:4b20:12:f001::105;
 deny 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
+deny 2001:4b98:dc0:43:f816:3eff:feed:683f;
 deny 2001:4b98:dc0:47:216:3eff:fe3d:888c;
 deny 2001:620:20d0::19;
 deny 2001:620:20d0::20;
@@ -973,6 +975,7 @@ deny 23.154.177.7;
 deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.24.6;
+deny 23.155.8.104;
 deny 23.236.122.62;
 deny 23.26.133.239;
 deny 23.94.133.162;
@@ -997,6 +1000,7 @@ deny 2600:3c00::f03c:91ff:fe73:f9ba;
 deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c03:e000:fa::1;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
+deny 2602:2e5::104;
 deny 2602:2e6:0:6::;
 deny 2602:f9f3:0:2::14;
 deny 2602:fc24:12:81a6::1;
@@ -1223,6 +1227,7 @@ deny 2a00:1dc0:caff:73::a568;
 deny 2a00:1dc0:caff:8b::24bd;
 deny 2a00:99a0:0:1000::2;
 deny 2a01:4262:1ab:ffff::133;
+deny 2a01:4f9:4a:4442::5;
 deny 2a01:5e0:36:cf2a::1;
 deny 2a01:6340:2:501::10;
 deny 2a01:6340:2:501::20;
@@ -1364,7 +1369,6 @@ deny 2a06:1700:4:14::1;
 deny 2a06:d380:0:103::62;
 deny 2a06:d380:0:103::63;
 deny 2a06:e80:3000:1:bad:babe:ca11:911;
-deny 2a07:5900::253;
 deny 2a07:e01:2:13::2;
 deny 2a07:e03:2a::bcde;
 deny 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
@@ -1684,11 +1688,11 @@ deny 45.95.169.255;
 deny 45.95.202.48;
 deny 46.165.243.36;
 deny 46.182.21.248;
+deny 46.226.107.206;
 deny 46.226.164.14;
 deny 46.232.251.191;
 deny 46.234.47.105;
 deny 46.38.255.27;
-deny 46.41.150.103;
 deny 50.3.182.133;
 deny 50.3.182.156;
 deny 51.15.249.160;
@@ -1748,6 +1752,7 @@ deny 54.36.108.162;
 deny 5.45.102.93;
 deny 5.45.104.176;
 deny 5.45.98.162;
+deny 54.87.125.137;
 deny 5.61.51.143;
 deny 57.129.20.162;
 deny 5.79.66.19;
@@ -1870,7 +1875,6 @@ deny 91.208.75.239;
 deny 91.208.75.3;
 deny 91.208.75.4;
 deny 91.210.59.57;
-deny 91.217.219.253;
 deny 91.219.236.101;
 deny 91.219.237.56;
 deny 91.219.239.166;
@@ -1928,4 +1932,5 @@ deny 95.164.46.204;
 deny 95.168.173.143;
 deny 95.211.210.103;
 deny 95.211.244.28;
+deny 96.42.26.63;
 deny 98.128.173.33;
