--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -7,6 +7,7 @@ set_real_ip_from 103.126.161.54;
 set_real_ip_from 103.129.222.46;
 set_real_ip_from 103.163.218.11;
 set_real_ip_from 103.172.134.26;
+set_real_ip_from 103.174.253.222;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.208.86.5;
 set_real_ip_from 103.251.167.10;
@@ -118,6 +119,7 @@ set_real_ip_from 130.193.10.21;
 set_real_ip_from 130.193.15.186;
 set_real_ip_from 134.122.66.38;
 set_real_ip_from 135.125.205.25;
+set_real_ip_from 135.181.124.211;
 set_real_ip_from 136.244.111.163;
 set_real_ip_from 137.63.71.51;
 set_real_ip_from 138.59.18.110;
@@ -148,7 +150,6 @@ set_real_ip_from 151.80.148.159;
 set_real_ip_from 152.89.233.169;
 set_real_ip_from 154.16.116.61;
 set_real_ip_from 160.119.249.240;
-set_real_ip_from 161.35.129.51;
 set_real_ip_from 162.247.72.192;
 set_real_ip_from 162.247.72.199;
 set_real_ip_from 162.247.74.200;
@@ -705,6 +706,7 @@ set_real_ip_from 2001:41d0:a:fe22::1;
 set_real_ip_from 2001:470:1:908::9001;
 set_real_ip_from 2001:4b20:12:f001::105;
 set_real_ip_from 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
+set_real_ip_from 2001:4b98:dc0:43:f816:3eff:feed:683f;
 set_real_ip_from 2001:4b98:dc0:47:216:3eff:fe3d:888c;
 set_real_ip_from 2001:620:20d0::19;
 set_real_ip_from 2001:620:20d0::20;
@@ -973,6 +975,7 @@ set_real_ip_from 23.154.177.7;
 set_real_ip_from 23.154.177.8;
 set_real_ip_from 23.154.177.9;
 set_real_ip_from 23.155.24.6;
+set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.236.122.62;
 set_real_ip_from 23.26.133.239;
 set_real_ip_from 23.94.133.162;
@@ -997,6 +1000,7 @@ set_real_ip_from 2600:3c00::f03c:91ff:fe73:f9ba;
 set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
 set_real_ip_from 2600:3c03:e000:fa::1;
 set_real_ip_from 2600:3c03::f03c:94ff:fed1:8c69;
+set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:6::;
 set_real_ip_from 2602:f9f3:0:2::14;
 set_real_ip_from 2602:fc24:12:81a6::1;
@@ -1223,6 +1227,7 @@ set_real_ip_from 2a00:1dc0:caff:73::a568;
 set_real_ip_from 2a00:1dc0:caff:8b::24bd;
 set_real_ip_from 2a00:99a0:0:1000::2;
 set_real_ip_from 2a01:4262:1ab:ffff::133;
+set_real_ip_from 2a01:4f9:4a:4442::5;
 set_real_ip_from 2a01:5e0:36:cf2a::1;
 set_real_ip_from 2a01:6340:2:501::10;
 set_real_ip_from 2a01:6340:2:501::20;
@@ -1364,7 +1369,6 @@ set_real_ip_from 2a06:1700:4:14::1;
 set_real_ip_from 2a06:d380:0:103::62;
 set_real_ip_from 2a06:d380:0:103::63;
 set_real_ip_from 2a06:e80:3000:1:bad:babe:ca11:911;
-set_real_ip_from 2a07:5900::253;
 set_real_ip_from 2a07:e01:2:13::2;
 set_real_ip_from 2a07:e03:2a::bcde;
 set_real_ip_from 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
@@ -1684,11 +1688,11 @@ set_real_ip_from 45.95.169.255;
 set_real_ip_from 45.95.202.48;
 set_real_ip_from 46.165.243.36;
 set_real_ip_from 46.182.21.248;
+set_real_ip_from 46.226.107.206;
 set_real_ip_from 46.226.164.14;
 set_real_ip_from 46.232.251.191;
 set_real_ip_from 46.234.47.105;
 set_real_ip_from 46.38.255.27;
-set_real_ip_from 46.41.150.103;
 set_real_ip_from 50.3.182.133;
 set_real_ip_from 50.3.182.156;
 set_real_ip_from 51.15.249.160;
@@ -1748,6 +1752,7 @@ set_real_ip_from 54.36.108.162;
 set_real_ip_from 5.45.102.93;
 set_real_ip_from 5.45.104.176;
 set_real_ip_from 5.45.98.162;
+set_real_ip_from 54.87.125.137;
 set_real_ip_from 5.61.51.143;
 set_real_ip_from 57.129.20.162;
 set_real_ip_from 5.79.66.19;
@@ -1870,7 +1875,6 @@ set_real_ip_from 91.208.75.239;
 set_real_ip_from 91.208.75.3;
 set_real_ip_from 91.208.75.4;
 set_real_ip_from 91.210.59.57;
-set_real_ip_from 91.217.219.253;
 set_real_ip_from 91.219.236.101;
 set_real_ip_from 91.219.237.56;
 set_real_ip_from 91.219.239.166;
@@ -1928,4 +1932,5 @@ set_real_ip_from 95.164.46.204;
 set_real_ip_from 95.168.173.143;
 set_real_ip_from 95.211.210.103;
 set_real_ip_from 95.211.244.28;
+set_real_ip_from 96.42.26.63;
 set_real_ip_from 98.128.173.33;
