--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -115,6 +115,7 @@ deny 2001:67c:89c:702:1ce:1ce:babe:9;
 deny 2001:780:107:b::85;
 deny 2001:910:1400:107::2;
 deny 2001:9b1:c300:3044::610;
+deny 2001:b030:2422::7234;
 deny 2001:bc8:1600:472a::1;
 deny 2001:bc8:700:9212::1;
 deny 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
@@ -136,7 +137,6 @@ deny 2602:fc24:19:30::1;
 deny 2602:fc24:19:95b7::1;
 deny 2602:fccf:310:1::a;
 deny 2602:fccf:310:1::b;
-deny 2602:fef9:100:1100::199;
 deny 2603:3:610a:5050::;
 deny 2604:2dc0:202:300::ed3;
 deny 2604:6600:0:42::2;
@@ -447,6 +447,7 @@ deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:104:fe02::1;
 deny 2a04:52c0:105:78fc::1;
 deny 2a04:52c0:105:82c0::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394::1;
 deny 2a04:52c0:108:4b9e::1;
 deny 2a04:52c0:108:a34f::1;
