--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -150,6 +150,7 @@ allow 152.89.233.169;
 allow 154.16.116.61;
 allow 160.119.249.240;
 allow 162.247.72.192;
+allow 162.247.72.199;
 allow 162.247.74.200;
 allow 162.247.74.201;
 allow 162.247.74.202;
@@ -187,7 +188,6 @@ allow 173.232.195.146;
 allow 173.249.57.253;
 allow 175.214.127.6;
 allow 176.118.193.33;
-allow 176.121.81.51;
 allow 176.126.253.190;
 allow 176.58.100.98;
 allow 176.58.121.177;
@@ -484,6 +484,7 @@ allow 185.220.103.7;
 allow 185.220.103.8;
 allow 185.220.103.9;
 allow 185.225.69.203;
+allow 185.225.69.232;
 allow 185.227.134.106;
 allow 185.227.68.78;
 allow 185.233.100.23;
@@ -937,6 +938,7 @@ allow 216.239.90.19;
 allow 216.24.213.26;
 allow 216.73.159.101;
 allow 216.73.159.75;
+allow 217.12.215.167;
 allow 217.12.221.131;
 allow 217.146.2.41;
 allow 23.137.248.100;
@@ -991,10 +993,10 @@ allow 2.58.56.90;
 allow 2.58.95.31;
 allow 2.58.95.35;
 allow 2.58.95.38;
-allow 2600:3c00:e000:4ee::3;
+allow 2600:3c00:e000:4ee::1;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
-allow 2600:3c03:e000:fa::1;
+allow 2600:3c03:e000:fa::2;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2602:2e5::104;
 allow 2602:2e6:0:6::;
@@ -1006,6 +1008,7 @@ allow 2602:fc24:19:30::1;
 allow 2602:fc24:19:95b7::1;
 allow 2602:fccf:310:1::a;
 allow 2602:fccf:310:1::b;
+allow 2602:fef9:100:1100::199;
 allow 2603:3:610a:5050::;
 allow 2604:2dc0:202:300::ed3;
 allow 2604:6600:0:42::2;
@@ -1600,6 +1603,7 @@ allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.220.98.139;
 allow 31.42.185.134;
+allow 3.220.101.51;
 allow 35.0.127.52;
 allow 35.240.241.135;
 allow 37.1.201.144;
@@ -1616,7 +1620,6 @@ allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.242.254.131;
 allow 38.97.116.244;
-allow 44.217.58.7;
 allow 45.12.3.80;
 allow 45.128.232.151;
 allow 45.132.246.245;
