--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -150,6 +150,7 @@ set_real_ip_from 152.89.233.169;
 set_real_ip_from 154.16.116.61;
 set_real_ip_from 160.119.249.240;
 set_real_ip_from 162.247.72.192;
+set_real_ip_from 162.247.72.199;
 set_real_ip_from 162.247.74.200;
 set_real_ip_from 162.247.74.201;
 set_real_ip_from 162.247.74.202;
@@ -187,7 +188,6 @@ set_real_ip_from 173.232.195.146;
 set_real_ip_from 173.249.57.253;
 set_real_ip_from 175.214.127.6;
 set_real_ip_from 176.118.193.33;
-set_real_ip_from 176.121.81.51;
 set_real_ip_from 176.126.253.190;
 set_real_ip_from 176.58.100.98;
 set_real_ip_from 176.58.121.177;
@@ -484,6 +484,7 @@ set_real_ip_from 185.220.103.7;
 set_real_ip_from 185.220.103.8;
 set_real_ip_from 185.220.103.9;
 set_real_ip_from 185.225.69.203;
+set_real_ip_from 185.225.69.232;
 set_real_ip_from 185.227.134.106;
 set_real_ip_from 185.227.68.78;
 set_real_ip_from 185.233.100.23;
@@ -937,6 +938,7 @@ set_real_ip_from 216.239.90.19;
 set_real_ip_from 216.24.213.26;
 set_real_ip_from 216.73.159.101;
 set_real_ip_from 216.73.159.75;
+set_real_ip_from 217.12.215.167;
 set_real_ip_from 217.12.221.131;
 set_real_ip_from 217.146.2.41;
 set_real_ip_from 23.137.248.100;
@@ -991,10 +993,10 @@ set_real_ip_from 2.58.56.90;
 set_real_ip_from 2.58.95.31;
 set_real_ip_from 2.58.95.35;
 set_real_ip_from 2.58.95.38;
-set_real_ip_from 2600:3c00:e000:4ee::3;
+set_real_ip_from 2600:3c00:e000:4ee::1;
 set_real_ip_from 2600:3c00::f03c:91ff:fe73:f9ba;
 set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
-set_real_ip_from 2600:3c03:e000:fa::1;
+set_real_ip_from 2600:3c03:e000:fa::2;
 set_real_ip_from 2600:3c03::f03c:94ff:fed1:8c69;
 set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:6::;
@@ -1006,6 +1008,7 @@ set_real_ip_from 2602:fc24:19:30::1;
 set_real_ip_from 2602:fc24:19:95b7::1;
 set_real_ip_from 2602:fccf:310:1::a;
 set_real_ip_from 2602:fccf:310:1::b;
+set_real_ip_from 2602:fef9:100:1100::199;
 set_real_ip_from 2603:3:610a:5050::;
 set_real_ip_from 2604:2dc0:202:300::ed3;
 set_real_ip_from 2604:6600:0:42::2;
@@ -1600,6 +1603,7 @@ set_real_ip_from 2a12:a800:2:1:45:138:16:203;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.220.98.139;
 set_real_ip_from 31.42.185.134;
+set_real_ip_from 3.220.101.51;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 35.240.241.135;
 set_real_ip_from 37.1.201.144;
@@ -1616,7 +1620,6 @@ set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.242.254.131;
 set_real_ip_from 38.97.116.244;
-set_real_ip_from 44.217.58.7;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.232.151;
 set_real_ip_from 45.132.246.245;
