--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -20,7 +20,6 @@ deny 2001:41d0:701:1100::4f60;
 deny 2001:41d0:800:1f70::;
 deny 2001:41d0:801:2000::15bb;
 deny 2001:41d0:a:5c0::1;
-deny 2001:41d0:a:fe22::1;
 deny 2001:470:1:908::9001;
 deny 2001:4b20:12:f001::105;
 deny 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
@@ -236,7 +235,6 @@ deny 2607:5300:205:200::4894;
 deny 2607:5300:61:785::;
 deny 2607:5300:61:785:1:2:3:4;
 deny 2607:f530:8002::19;
-deny 2620:59:a000:9666:216:3eff:fe7d:dae8;
 deny 2620:7:6001::101;
 deny 2620:7:6001::102;
 deny 2620:7:6001::103;
@@ -447,7 +445,6 @@ deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:104:fe02::1;
 deny 2a04:52c0:105:78fc::1;
 deny 2a04:52c0:105:82c0::1;
-deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394::1;
 deny 2a04:52c0:108:4b9e::1;
 deny 2a04:52c0:108:a34f::1;
@@ -681,6 +678,9 @@ deny 2a0b:f4c2::6;
 deny 2a0b:f4c2::7;
 deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
+deny 2a0c:2500:571:3b8:2703:f58a:8b07:7801;
+deny 2a0c:2500:571:3b8:c584:d85:46e9:56ef;
+deny 2a0c:2500:571:3b8:caf7:be28:d452:b708;
 deny 2a0c:e300::23;
 deny 2a0d:3e83:1:b284::1;
 deny 2a0d:c2c0:1:4::2;
